--- a/A1_300222206.ipynb
+++ b/A1_300222206.ipynb
@@ -19,26 +19,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "c:\\Python311\\python.exe\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "\n",
-        "df = pd.read_csv('dermatology_database_1.csv')\n",
-        "df.head()"
+        "import sys\n",
+        "print(sys.executable)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
-        "url = # provide the link to the raw version of dataset. You *need* to provide a link to *your own* github repository. DO NOT use the link that is provided as an example.\n",
-        "\n",
-        "dataset = pd.read_csv(url)"
+        "# Load the dataset\n",
+        "url = \"https://raw.githubusercontent.com/rinaxosman/csi4106-a1/main/dermatology_database_1.csv\"\n",
+        "dataset = pd.read_csv(url)\n"
       ]
     },
     {
@@ -51,20 +58,52 @@
         "\n",
         "1. **Analysis of Missing Values**: Examine the datasets to identify and assess ssing values in various attributes. Missing values may be represented by symbols ch as '?', empty strings, or other placeholders.\n",
         "\n",
-        "    1.1 In the list of options, what are the datasets that contain missing values? ecifically, which attribute or attributes has missing values?\n",
+        "    <b>1.1 In the list of options, what are the datasets that contain missing values? ecifically, which attribute or attributes has missing values? </b>\n",
         "\n",
-        "    1.2 Describe the methodology used for this investigation, and provide the rresponding code.\n",
+        "    - The dermatology dataset (dataset #2) contains missing values represented by the symbol \"?\". Specifically, the \"Age\" attribute has missing values. There is a total of 8 missing instances for the age attribute.\n",
         "\n",
-        "    1.1 Data imputation involves replacing missing or incomplete data with substituted values to preserve the dataset's integrity for subsequent analysis. Propose imputation strategies for each attribute with missing values."
+        "    <b> 1.2 Describe the methodology used for this investigation, and provide the rresponding code.</b>\n",
+        "\n",
+        "   - Since we already know that the missing values are filled with \"?\" and only in the Age column, we applied the following code to find out how many values are missing:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Missing values in Age column: 8\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Counts missing val in age column\n",
+        "missing_age = dataset['age'].value_counts().get('?', 0)\n",
+        "print(\"Missing values in Age column:\", missing_age)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<b>1.1 Data imputation involves replacing missing or incomplete data with substituted values to preserve the dataset's integrity for subsequent analysis. Propose imputation strategies for each attribute with missing values.</b>\n",
+        "\n",
+        "Since a portion of the Age attribute is missing, it is advisable to apply an imputation strategy. We can replace the missing values with the mean age of the dataset. Below is the code to perform this imputation:\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Your code goes here"
+        "# Impute missing values with the mean age\n",
+        "mean_age = dataset[dataset['age'] != '?']['age'].astype(float).mean()\n",
+        "dataset['age'] = dataset['age'].replace('?', mean_age)\n"
       ]
     },
     {
@@ -193,6 +232,18 @@
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.3"
     }
   },
   "nbformat": 4,
