--- a/A1_300222206.ipynb
+++ b/A1_300222206.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -92,16 +92,16 @@
       "source": [
         "<b>1.1 Data imputation involves replacing missing or incomplete data with substituted values to preserve the dataset's integrity for subsequent analysis. Propose imputation strategies for each attribute with missing values.</b>\n",
         "\n",
-        "Since a portion of the Age attribute is missing, it is advisable to apply an imputation strategy. We can replace the missing values with the mean age of the dataset. Below is the code to perform this imputation:\n"
+        "Since a portion of the \"Age\" attribute is missing, we can impute them by replacing the missing values (\"?\") with the average age of all the available ages in the dataset. Using the mean is helpful because it gives a central value that represents the ages of most patients. Here’s the code to fill in the missing values:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Impute missing values with the mean age\n",
+        "# Impute missing values with mean age\n",
         "mean_age = dataset[dataset['age'] != '?']['age'].astype(float).mean()\n",
         "dataset['age'] = dataset['age'].replace('?', mean_age)\n"
       ]
@@ -112,16 +112,11 @@
       "source": [
         "2. **Select and familiarize yourself with a classification task:** Choose one of e provided datasets for further investigation. It is advisable to select a dataset ntaining a sufficiently large number of examples, ideally around 1,000, to ensure bust results when applying machine learning algorithms in the subsequent assignment.\n",
         "\n",
-        "    2.1 What is the objective of the task? Is it intended for a specific plication? Do you possess expertise in this particular domain of application?\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Your code goes here"
+        "    <b>2.1 What is the objective of the task? Is it intended for a specific plication? Do you possess expertise in this particular domain of application?</b>\n",
+        "\n",
+        "    - The goal of this task is to figure out which type of erythemato-squamous disease a patient has using the Dermatology Dataset. These diseases include psoriasis, seborrheic dermatitis, lichen planus, pityriasis rosea, chronic dermatitis, and pityriasis rubra pilaris. They all have similar signs, like redness and scaling of the skin, which makes it tough to tell them apart without tests.\n",
+        "    - The dataset includes clinical information about the patients and results from looking at skin samples under a microscope. It's by analyzing this data that they hope to make diagnosing these diseases easier and more accurate.\n",
+        "    - I don’t have a background in dermatology, but I find this topic interesting. Working with this dataset will help me learn more about how ML can be used in healthcare.s\n"
       ]
     },
     {
