--- a/A1_300222206.ipynb
+++ b/A1_300222206.ipynb
@@ -19,27 +19,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "c:\\Python311\\python.exe\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "import sys\n",
-        "print(sys.executable)"
+        "# print(sys.executable)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -69,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -97,13 +89,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Impute missing values with mean age\n",
         "mean_age = dataset[dataset['age'] != '?']['age'].astype(float).mean()\n",
-        "dataset['age'] = dataset['age'].replace('?', mean_age)\n"
+        "dataset['age'] = dataset['age'].replace('?', mean_age)"
       ]
     },
     {
@@ -132,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -148,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -168,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -184,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -200,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
