--- a/A1_300222206.ipynb
+++ b/A1_300222206.ipynb
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 338,
+      "execution_count": 347,
       "metadata": {},
       "outputs": [
         {
@@ -220,64 +220,39 @@
             "2    331.2098628537912         Good  \n",
             "33  460.88727561667037     Standard  \n"
           ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\rinax\\AppData\\Local\\Temp\\ipykernel_35064\\3288117445.py:6: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  data = pd.read_csv(train_url)\n",
-            "C:\\Users\\rinax\\AppData\\Local\\Temp\\ipykernel_35064\\3288117445.py:12: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  data['Occupation'].replace('_______', pd.NA, inplace=True)\n",
-            "C:\\Users\\rinax\\AppData\\Local\\Temp\\ipykernel_35064\\3288117445.py:14: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  data['Occupation'].fillna(mode_occupation, inplace=True)\n",
-            "C:\\Users\\rinax\\AppData\\Local\\Temp\\ipykernel_35064\\3288117445.py:18: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  data['Monthly_Inhand_Salary'].replace('', pd.NA, inplace=True)\n"
-          ]
         }
       ],
       "source": [
         "import pandas as pd\n",
-        "import urllib.request\n",
         "\n",
-        "# dataset #7\n",
+        "# Dataset #7\n",
         "train_url = \"https://raw.githubusercontent.com/rinaxosman/csi4106-a1/main/07/train.csv\"\n",
-        "data = pd.read_csv(train_url)\n",
+        "data = pd.read_csv(train_url, low_memory=False)  # Set low_memory to False to avoid DtypeWarning\n",
         "\n",
         "# Imputation for \"Name\": Since names are unique, we will leave these as missing\n",
         "\n",
         "# Imputation for \"Occupation\"\n",
         "# Fill \"_______\" with NaN\n",
-        "data['Occupation'].replace('_______', pd.NA, inplace=True)\n",
+        "data['Occupation'] = data['Occupation'].replace('_______', pd.NA)\n",
         "mode_occupation = data['Occupation'].mode()[0]\n",
-        "data['Occupation'].fillna(mode_occupation, inplace=True)\n",
+        "data['Occupation'] = data['Occupation'].fillna(mode_occupation)\n",
         "\n",
         "# Imputation for \"Monthly_Inhand_Salary\"\n",
+        "data['Monthly_Inhand_Salary'] = data['Monthly_Inhand_Salary'].replace('', pd.NA)\n",
         "\n",
-        "data['Monthly_Inhand_Salary'].replace('', pd.NA, inplace=True)\n",
-        "# replaces missing salary values with the median salary of the occupation\n",
+        "# Convert the 'Monthly_Inhand_Salary' to numeric, coercing errors\n",
+        "data['Monthly_Inhand_Salary'] = pd.to_numeric(data['Monthly_Inhand_Salary'], errors='coerce')\n",
+        "\n",
+        "# Replace missing salary values with the median salary of the occupation\n",
         "data['Monthly_Inhand_Salary'] = data.groupby('Occupation')['Monthly_Inhand_Salary'].transform(\n",
         "    lambda x: x.fillna(x.median())\n",
         ")\n",
         "\n",
         "selected_rows = data.iloc[[9, 2, 33]]\n",
         "pd.set_option('display.max_columns', None)\n",
-        "print(selected_rows)"
+        "print(selected_rows)\n",
+        "\n",
+        "# This chunk of code was optimized by chatgpt, due to it having data type warnings, and chained assignment warnings. the logic of the code remains the same. \n"
       ]
     },
     {
@@ -823,13 +798,25 @@
         "\n",
         "# References\n",
         "\n",
-        "Make sure you provide references to ALL sources used (articles, code, algorithms).\n",
         "\n",
-        "- https://stackoverflow.com/questions/46000191/utf-8-codec-cant-decode-byte-0x92-in-position-18-invalid-start-byte\n",
+        "- Stack Overflow. (2017). UTF-8 codec can't decode byte 0x92 in position 18: invalid start byte. Retrieved from https://stackoverflow.com/questions/46000191/utf-8-codec-cant-decode-byte-0x92-in-position-18-invalid-start-byte\n",
+        "\n",
+        "- Olcay Bolat. (2021). Dermatology dataset classification. Kaggle. Retrieved from https://www.kaggle.com/datasets/olcaybolat1/dermatology-dataset-classification\n",
+        "\n",
+        "- GeeksforGeeks. (n.d.). Count NaN or missing values in Pandas DataFrame. Retrieved from https://www.geeksforgeeks.org/count-nan-or-missing-values-in-pandas-dataframe/\n",
+        "\n",
         "\n",
         "## AI transcript\n",
-        "**Hint:** To share a link to your colab notebook, click on \"share\" on the top right. Then, under *General access* , change *Restricted* to \"Anyone with the link\"."
+        "\n",
+        "- https://chatgpt.com/share/66fa1938-d55c-800f-ad2f-9ee54c70d4ab"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
